# Flyff-Resource_Framework-v2

./: CMakeLists.txt  gitignore  readme.md
src/app/: main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  GLB-Test.cpp  Glb-Test.h  Log.cpp  Log.h
src/core/asset/: AssetController.cpp  AssetController.h
src/core/asset/converter/: AssetConverterBase.cpp  AssetConverterBase.h  ImageConverter.cpp  ImageConverter.h  ModelConverter.cpp  ModelConverter.h  SfxConverter.cpp  SfxConverter.h  stb_image_write_impl.cpp
src/core/asset/decoder/: AniDecoder.cpp  AniDecoder.h  BinaryReader.h  DdsDecoder.cpp  DecoderBase.cpp  DecoderBase.h  ImageDecoder.cpp  ImageDecoder.h  O3DDecoder.cpp  O3DDecoder.h  O3DDecryptor.cpp  O3DDecryptor.h  SfxDecoder.cpp  SfxDecoder.h  TgaDecoder.cpp  TgaDecoder.h
src/core/asset/index/: AssetIndexBuilder.cpp  AssetIndexBuilder.h
src/core/asset/loader/: AnimationLoader.cpp  AnimationLoader.h  AudioLoader.cpp  AudioLoader.h  ImageLoader.cpp  ImageLoader.h  ModelLoader.cpp  ModelLoader.h  SfxLoader.cpp  SfxLoader.h
src/core/asset/normalizer/: ModelNormalizer.cpp  ModelNormalizer.h
src/core/asset/parser/: ModelParser.cpp  ModelParser.h
src/core/asset/writer/: ModelWriter.cpp  ModelWriter.h
src/core/context/: TextContextBuilder.cpp
src/core/controller/: DataController.cpp  DataController.h  PipelineController.cpp  PipelineController.h
src/core/controller/pipeline/: AssetPipeline.cpp  AssetPipeline.h  ResourcePipeline.cpp  ResourcePipeline.h  RuntimePipeline.h  SourcePipeline.cpp  SourcePipeline.h
src/core/resource/descriptors/: Descriptor.h  DescriptorLoader.cpp  DescriptorLoader.h  DescriptorRegistry.cpp  DescriptorRegistry.h
src/core/resource/parser/: LineFilter.cpp  LineFilter.h  UniversalParser.cpp  UniversalParser.h
src/core/resource/path/: PathBuilder.cpp  PathBuilder.h
src/core/resource/scanner/: PathScanner.cpp  PathScanner.h
src/core/resource/serializer/: SerializerBootstrap.cpp  SerializerBootstrap.h  SerializerRegistry.cpp  WorldSerializer.h  (+2 more)
src/data/global/: GlobalStore.h
src/data/module/: TokenData.h
src/data/project/: ProjectData.h
src/data/state/: DataState.h  JobState.h
src/ui/: DialogFirstRun.cpp  DialogFirstRun.h  UiController.cpp  UiController.h
(+112 files in other folders)
